# raytracer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  main.cpp  readme.md
include/: AABB.h  Camera.h  Intersection.h  KDTree.h  Light.h  Lighting.h  Line.h  Material.h  Mesh.h  MeshKDTree.h  Photon.h  PhotonKDTree.h  PhotonMap.h  Ray.h  Scene.h  Settings.h  Sphere.h  Square.h  Trackball.h  Triangle.h  Vec3.h  imageLoader.h  matrixUtilities.h
src/: Camera.cpp  Camera.h  Intersection.cpp  Intersection.h  Light.h  Lighting.cpp  Lighting.h  Material.h  Mesh.cpp  Mesh.h  MeshKDTree.cpp  Photon.h  PhotonKDTree.cpp  PhotonKDTree.h  PhotonMap.cpp  PhotonMap.h  Scene.h  Settings.h  Sphere.h  Square.h  Trackball.cpp  Trackball.h  Triangle.h  Vec3.h  imageLoader.cpp  main.cpp  matrixUtilities.h
